--- a/public/src/index.css
+++ b/public/src/index.css
@@ -22,3 +22,10 @@
   color: black;
   font-weight: 400;
 }
+
+.link {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 400;
+  margin: 2rem 2rem 0 0;
+  display: inline-block;
+}
